edit small change
add GOOGLEMAP_APIKEY to index.php for mustache render.
cahnge static value of api key in home.mustache to mustache value

--- a/templates/home.mustache
+++ b/templates/home.mustache
@@ -50,7 +50,7 @@
     }
 
   </style>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDWsWr_PjYbcT9y2E7uRobq2Wn7NrNZuHA"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key={{map_api_key}}"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
   <script src="http://isudnop.com/tweetmaps/js/function.js"></script>
   <head></head>
